# skill-man

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
skill_man/: cli.py  links.py  sources.py  stats.py  sync.py  util.py
skman/: cli.py  links.py  migrate.py  show.py  sources.py  stats.py  sync.py  util.py
tests/: test_basic.py  test_migrate.py
